# LandMap

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BUG_LOG.md  CLAUDE.md  Makefile  README.md  SKILL.md  SOURCES.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml
.claude/: settings.json
.github/: README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: boundaries.py  health.py  layers.py  regions.py
backend/app/core/: config.py
backend/app/data/: boundaries.geojson
backend/app/data/gta/: gta-bus-routes.geojson  gta-bus-stops.geojson  gta-go-transit.geojson  gta-streetcar-lines.geojson  gta-subway-lines.geojson  gta-subway-stations.geojson
backend/app/data/gva/: bus-routes.geojson  bus-stops.geojson  demographics.geojson  housing-prices.geojson  new-highrises.geojson  road-construction.geojson  seabus-wce.geojson  skytrain-expansion.geojson  skytrain-lines.geojson  skytrain-stations.geojson
backend/app/ingest/: __init__.py  boundaries.py  fetch.py  gta.py  gtfs.py  gva.py  translink.py
backend/app/schemas/: boundaries.py  layers.py
backend/app/services/: boundaries.py  layers.py  sources.py
backend/tests/: conftest.py
backend/tests/unit/: test_boundaries.py  test_config.py  test_health.py  test_ingest_boundaries.py  test_ingest_gta.py  test_ingest_gtfs.py  test_ingest_gva.py  test_ingest_translink.py  test_layers.py  test_sources.py
frontend/: .dockerignore  (+7 more)
(+37 files in other folders)
