[project]
name = "landmap-backend"
version = "0.1.0"
description = "LandMap backend API - land information for the Greater Vancouver Area"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
# Project root holds the top-level `app` package; this keeps isort treating
# `app` imports as first-party.
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
